--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- <app-login></app-login> -->
-<!-- <app-otp></app-otp> -->
-<app-chatheader></app-chatheader>
+<app-teams-service></app-teams-service>
+<router-outlet></router-outlet>
