--- a/Frontend/src/app/component/main/chatheader/chatheader.component.css
+++ b/Frontend/src/app/component/main/chatheader/chatheader.component.css
@@ -39,12 +39,9 @@
 .navgation mat-icon {
   font-size: 20px;
   color: #fff;
+  margin: 0px 8px;
 }
-.custom-tab-group ::ng-deep .mat-tab-label {
-  background-color: #008069;
-  color: #fff;
-}
-.nav {
-  background-color: #008069;
-  color: #fff;
+.header button {
+  background: transparent;
+  border: none;
 }
