--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,3 +1,4 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html,
 body {
   height: 100%;
@@ -10,4 +11,16 @@ body {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.mat-mdc-tab .mdc-tab__text-label {
+  color: white !important;
 }
