--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-teams-service></app-teams-service>
+<!-- <app-teams-service></app-teams-service> -->
+<app-login></app-login>
 <router-outlet></router-outlet>
