--- a/Frontend/src/app/component/auth/login/login.component.css
+++ b/Frontend/src/app/component/auth/login/login.component.css
@@ -74,6 +74,10 @@
   text-align: center;
   font-size: 14px;
 }
+.phonecode {
+  width: 50px !important;
+  padding: 8px 0px !important;
+}
 .phone input {
   outline: none;
   border: none;
@@ -93,4 +97,7 @@
   border-radius: 3px;
   font-family: "Roboto", Arial, sans-serif;
   background: #00a884;
+}
+.error-message {
+  color: #f90909;
 }
