--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-teams-service></app-teams-service> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<app-otp></app-otp>
 <router-outlet></router-outlet>
