--- a/Frontend/src/app/component/auth/otp/otp.component.css
+++ b/Frontend/src/app/component/auth/otp/otp.component.css
@@ -18,8 +18,8 @@
 .header {
   display: flex;
   text-align: center;
-  align-items: left;
-  justify-content: left;
+  align-items: center;
+  justify-content: space-between;
 }
 .header button {
   background: transparent;
@@ -45,17 +45,20 @@
   justify-content: center;
 }
 .message {
-  margin: 100px 0px 15px 0px;
+  margin: 100px 25px 15px 25px;
 }
 .message span {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 15px;
 }
 .otp input {
-  height: 50px;
-  width: 50px;
-  border-radius: 20px;
+  width: 130px;
+  border: none;
+  border-bottom: 2px solid #060606;
   margin: 12px;
+  font-size: 25px;
+  text-align: center;
+  outline: none;
 }
 .timer span {
   font-family: "Roboto", Arial, sans-serif;
