add the firestone

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!-- <app-teams-service></app-teams-service> -->
 <!-- <app-login></app-login> -->
-<app-otp></app-otp>
+<!-- <app-otp></app-otp> -->
+<!-- <app-chatheader></app-chatheader> -->
+<!-- <app-welcome></app-welcome> -->
+<!-- <app-chats></app-chats> -->
 <router-outlet></router-outlet>
