--- a/Frontend/src/app/component/slider/teams-service/teams-service.component.html
+++ b/Frontend/src/app/component/slider/teams-service/teams-service.component.html
@@ -54,7 +54,7 @@
   <div class="row">
     <div class="col">
       <div class="action">
-        <button routerLink="/otp">AGREE AND CONTINUE</button>
+        <button routerLink="/login">AGREE AND CONTINUE</button>
       </div>
     </div>
   </div>
