--- a/Frontend/src/app/component/auth/otp/otp.component.html
+++ b/Frontend/src/app/component/auth/otp/otp.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col">
       <div class="header">
-        <button><mat-icon>keyboard_backspace</mat-icon></button>
+        <button routerLink="/login">
+          <mat-icon>keyboard_backspace</mat-icon>
+        </button>
         <span>Enter OTP Code</span>
         <button [matMenuTriggerFor]="menu">
           <mat-icon>more_vert</mat-icon>
@@ -17,8 +19,8 @@
     <div class="col">
       <div class="message">
         <span
-          >Waiting to automatically detect an SMS sent to +91 11******44. Wrong
-          number ?
+          >Waiting to automatically detect an SMS sent to +91 11******44.
+          <a routerLink="/login">Wrong number ?</a>
         </span>
       </div>
     </div>
@@ -42,7 +44,7 @@
   <div class="row">
     <div class="col">
       <div class="footer">
-        <button mat-raised-button>Verify</button>
+        <button mat-raised-button routerLink="/chat">Verify</button>
       </div>
     </div>
   </div>
