firebase add in project and chats routing is donr

--- a/Frontend/src/app/component/main/chatheader/chatheader.component.html
+++ b/Frontend/src/app/component/main/chatheader/chatheader.component.html
@@ -17,6 +17,9 @@
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item>Help</button>
+            <button mat-menu-item>New Group</button>
+            <button mat-menu-item>Linked Devices</button>
+            <button mat-menu-item>Settings</button>
           </mat-menu>
         </div>
       </div>
