--- a/Frontend/src/app/component/features/chats/chats.component.html
+++ b/Frontend/src/app/component/features/chats/chats.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col">
       <div class="header">
-        <button>
+        <button routerLink="/main">
           <svg
             width="30"
             height="27"
