--- a/Frontend/src/app/component/auth/otp/otp.component.html
+++ b/Frontend/src/app/component/auth/otp/otp.component.html
@@ -44,7 +44,7 @@
   <div class="row">
     <div class="col">
       <div class="footer">
-        <button mat-raised-button routerLink="/chat">Verify</button>
+        <button mat-raised-button routerLink="/profile">Verify</button>
       </div>
     </div>
   </div>
